# nonvex

./: LICENSE  README.md  pyproject.toml
examples/tensorflow/: nonvex.py  pyproject.toml  train_example.py
nonvex/: __init__.py
nonvex/app/: __init__.py
nonvex/client/: __init__.py  client.py
nonvex/search/: __init__.py  client.py  search.py
tests/: conftest.py  test_app.py  test_client.py  test_search.py
