[tool.poetry]
name = "train_example"
version = "0.0.1"
description = "Nonvex TensorFlow hyperparameter search example"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.scripts]
train = "train_example:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
nonvex = {path = "../../", develop = true, extras = ["app", "client"]}
